--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Node modules
-node_modules/
-
 # Logs
 logs
 *.log
@@ -10,33 +7,57 @@ yarn-error.log*
 
 # Dependency directories
 node_modules/
-jspm_packages/
 
-# Build directories
+# Production build output
 build/
 dist/
-out/
-.cache/
 
-# .env files
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# React Native
-.expo/
-.expo-shared/
-
-# Mac system files
-.DS_Store
-
 # Editor directories and files
 .vscode/
 .idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Test coverage
+coverage/
+
+# Lock files
+package-lock.json
+yarn.lock
+
+# Django specific
+*.pyc
+__pycache__/
+db.sqlite3
+/static/
+/media/
+
+# MySQL configuration
+*.sql
+
+# Python environment files
+.venv/
+.env
+
+# Pytest
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+
+# Miscellaneous
+*.swp
+*.swo
+
+# Firebase related
+firebase.json
+.firebaserc
